feature: add explore community wordlist feature

--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -12,9 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bg_rounded_top"
-        android:padding="20dp"
+        android:padding="10dp"
         >
-
 
         <LinearLayout
             android:id="@+id/fr_dictionary_top_bar"
@@ -60,7 +59,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/fr_dictionary_list_word_definition_list_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="600dp"
 
             tools:listitem="@layout/fragment_definition_word_item"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
