--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="660dp"
+
+    android:orientation="vertical"
+    android:fillViewport="true"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.ExploreFragment"
     android:background="@color/background"
@@ -50,7 +54,7 @@
 
             app:layout_constraintTop_toBottomOf="@id/fr_explore_user_wordlist_recycler_view"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="10dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/fr_explore_cambridge_wordlist_recycler_view"
@@ -65,7 +69,33 @@
             android:layout_marginTop="10dp"
             />
 
+        <TextView
+            android:id="@+id/fr_explore_community_wordlist_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/community_word_list"
+            android:textSize="18sp"
+            android:textStyle="bold|italic"
+
+            app:layout_constraintTop_toBottomOf="@id/fr_explore_cambridge_wordlist_recycler_view"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="10dp"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/fr_explore_community_wordlist_recycler_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+
+            app:layout_constraintTop_toBottomOf="@id/fr_explore_community_wordlist_label"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="10dp"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</LinearLayout>
+</ScrollView>
 
