--- a/app/src/main/res/layout/activity_wordlist_detail.xml
+++ b/app/src/main/res/layout/activity_wordlist_detail.xml
@@ -58,7 +58,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ac_wordlist_detail_words_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="600dp"
 
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
