--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,125 +18,113 @@
         android:textAllCaps="true"
 
 
-        app:layout_constraintBottom_toTopOf="@id/ac_register_username_label"
+        app:layout_constraintBottom_toTopOf="@id/ac_register_username_text_layout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="50dp"
         />
 
-    <TextView
-        android:id="@+id/ac_register_username_label"
-        android:layout_width="wrap_content"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/ac_register_username_text_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:text="@string/username"
-        android:textSize="20sp"
+        app:startIconDrawable="@drawable/ic_email_24"
+        android:hint="@string/username"
 
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
 
-        android:layout_marginTop="200dp"
-        />
+        android:layout_marginTop="150dp"
+    >
 
-    <EditText
-        android:id="@+id/ac_register_username_edit_text"
-        android:layout_width="250dp"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/ac_register_username_text_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:textSize="20sp"
+            android:maxLines="1"
+            android:autofillHints="emailAddress"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/ac_register_password_text_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:hint="@string/example_username"
-        android:autofillHints="emailAddress"
-        android:maxLines="1"
-        android:inputType="text"
+        android:hint="@string/password"
+        app:startIconDrawable="@drawable/ic_lock_24"
+        app:endIconMode="custom"
+        app:endIconDrawable="@drawable/ic_visibility_on_24"
 
-        app:layout_constraintTop_toTopOf="@id/ac_register_username_label"
-        app:layout_constraintBottom_toBottomOf="@id/ac_register_username_label"
-        app:layout_constraintLeft_toRightOf="@id/ac_register_username_label"
+        app:layout_constraintTop_toBottomOf="@id/ac_register_username_text_layout"
+        app:layout_constraintLeft_toLeftOf="parent"
 
-        android:layout_marginStart="30dp"
-        />
+        android:layout_marginTop="20dp">
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/ac_register_password_text_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
-    <TextView
-        android:id="@+id/ac_register_password_label"
-        android:layout_width="wrap_content"
+            android:textSize="20sp"
+            android:maxLines="1"
+            android:inputType="textWebPassword"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/ac_register_confirm_password_text_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:text="@string/password"
-        android:textSize="20sp"
+        android:hint="@string/confirm_password"
+        app:startIconDrawable="@drawable/ic_lock_24"
+        app:endIconMode="custom"
+        app:endIconDrawable="@drawable/ic_visibility_on_24"
 
-        app:layout_constraintTop_toBottomOf="@id/ac_register_username_label"
-        app:layout_constraintBottom_toBottomOf="@id/ac_register_password_edit_text"
-        app:layout_constraintLeft_toLeftOf="@id/ac_register_username_label"
+        app:layout_constraintTop_toBottomOf="@id/ac_register_password_text_layout"
+        app:layout_constraintLeft_toLeftOf="parent"
 
-        android:layout_marginTop="30dp"
-        />
+        android:layout_marginTop="20dp">
 
-    <EditText
-        android:id="@+id/ac_register_password_edit_text"
-        android:layout_width="250dp"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/ac_register_confirm_password_text_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:textSize="20sp"
+            android:maxLines="1"
+            android:inputType="textWebPassword"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/ac_register_full_name_text_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:maxLines="1"
-        android:inputType="textWebPassword"
+        android:hint="@string/full_name"
+        app:startIconDrawable="@drawable/ic_person_24"
 
-        app:layout_constraintTop_toBottomOf="@id/ac_register_username_edit_text"
-        app:layout_constraintLeft_toLeftOf="@id/ac_register_username_edit_text"
-        android:layout_marginTop="20dp"
-        />
+        app:layout_constraintTop_toBottomOf="@id/ac_register_confirm_password_text_layout"
+        app:layout_constraintLeft_toLeftOf="parent"
 
-    <TextView
-        android:id="@+id/ac_register_confirm_password_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp">
 
-        android:text="@string/confirm_password"
-        android:textSize="20sp"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/ac_register_full_name_text_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
-        app:layout_constraintTop_toBottomOf="@id/ac_register_password_label"
-        app:layout_constraintBottom_toBottomOf="@id/ac_register_confirm_password_edit_text"
-        app:layout_constraintLeft_toLeftOf="@id/ac_register_password_label"
+            android:maxLines="1"
+            android:textSize="20sp"/>
 
-        android:layout_marginTop="30dp"
-        />
-
-    <EditText
-        android:id="@+id/ac_register_confirm_password_edit_text"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-
-        android:maxLines="1"
-        android:inputType="textWebPassword"
-
-        app:layout_constraintTop_toBottomOf="@id/ac_register_password_edit_text"
-        app:layout_constraintLeft_toLeftOf="@id/ac_register_password_edit_text"
-        android:layout_marginTop="20dp"
-        />
-
-    <TextView
-        android:id="@+id/ac_register_full_name_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="@string/full_name"
-        android:textSize="20sp"
-
-
-        app:layout_constraintTop_toTopOf="@id/ac_register_full_name_edit_text"
-        app:layout_constraintBottom_toBottomOf="@id/ac_register_full_name_edit_text"
-        app:layout_constraintLeft_toLeftOf="@id/ac_register_confirm_password_label"
-        />
-
-    <EditText
-        android:id="@+id/ac_register_full_name_edit_text"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-
-        android:hint="@string/example_full_name"
-
-        app:layout_constraintTop_toBottomOf="@id/ac_register_confirm_password_edit_text"
-        app:layout_constraintLeft_toLeftOf="@id/ac_register_confirm_password_edit_text"
-        android:layout_marginTop="20dp"
-        />
+    </com.google.android.material.textfield.TextInputLayout>
 
 
     <Button
@@ -148,7 +136,7 @@
         android:textSize="20sp"
 
 
-        app:layout_constraintTop_toBottomOf="@+id/ac_register_full_name_edit_text"
+        app:layout_constraintTop_toBottomOf="@+id/ac_register_full_name_text_layout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="40dp"
