ui: reset password layout enhancement

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -38,26 +38,32 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
 
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="250dp"
         />
 
-    <EditText
-        android:id="@+id/ac_reset_password_email_edit_text"
-        android:layout_width="300dp"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/ac_reset_password_email_text_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:hint="@string/example_username"
-        android:autofillHints="emailAddress"
-        android:maxLines="1"
-        android:inputType="text"
-        android:textSize="20sp"
+        app:startIconDrawable="@drawable/ic_email_24"
 
         app:layout_constraintTop_toBottomOf="@id/ac_reset_password_email_label"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
 
         android:layout_marginTop="30dp"
-        />
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/ac_reset_password_email_text_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:maxLines="1"
+            android:textSize="20sp"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/ac_reset_password_ok_button"
@@ -68,7 +74,7 @@
         android:textAllCaps="true"
         android:textSize="17sp"
 
-        app:layout_constraintTop_toBottomOf="@id/ac_reset_password_email_edit_text"
+        app:layout_constraintTop_toBottomOf="@id/ac_reset_password_email_text_layout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="30dp"/>
