--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -16,37 +16,29 @@
         android:background="@drawable/bg_rounded_top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp">
+        android:padding="10dp">
 
-        <LinearLayout
-            android:id="@+id/fr_explore_search_section"
-            android:layout_width="wrap_content"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/fr_explore_search_text_input_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            android:orientation="horizontal"
+            app:endIconMode="custom"
+            app:endIconDrawable="@drawable/ic_search_24"
+            style="@style/Theme.Material3.Light"
+            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
 
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/fr_explore_search_text_input_layout"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                app:endIconMode="custom"
-                app:endIconDrawable="@drawable/ic_search_24"
-                style="@style/Theme.Material3.Light"
-                >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/fr_explore_search_text_input_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="Search for word list"
+                />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/fr_explore_search_text_input_edit_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="Search for word list"
-                    />
-
-            </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/fr_explore_user_wordlist_label"
@@ -57,7 +49,7 @@
             android:textSize="18sp"
             android:textStyle="bold|italic"
 
-            app:layout_constraintTop_toBottomOf="@id/fr_explore_search_section"
+            app:layout_constraintTop_toBottomOf="@id/fr_explore_search_text_input_layout"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="30dp"
             />
