--- a/app/src/main/res/layout/fragment_list_wordlist_item.xml
+++ b/app/src/main/res/layout/fragment_list_wordlist_item.xml
@@ -4,14 +4,18 @@
     android:layout_width="155dp"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/bg_rounded_corners"
     android:padding="15dp">
 
     <LinearLayout
         android:id="@+id/fr_wordlist_item_linear_layout"
         android:layout_width="120dp"
         android:layout_height="100dp"
-        android:backgroundTint="#3956EF"
-        android:background="@drawable/custom_bg_add_wordlist"
+
+        style="@style/ShapeAppearance.Material3.Corner.ExtraLarge"
+        android:background="@drawable/bg_rounded_corners"
+        android:backgroundTint="@color/cardview_dark_background"
+
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:padding="10dp">
