--- a/app/src/main/res/layout/fragment_definition_item.xml
+++ b/app/src/main/res/layout/fragment_definition_item.xml
@@ -51,7 +51,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
+        app:icon="@drawable/ic_add_24"
         android:text="@string/add_to_word_list"
+        style="?attr/materialButtonOutlinedStyle"
 
         app:layout_constraintTop_toBottomOf="@id/fr_definition_example"
         app:layout_constraintRight_toRightOf="parent"
