--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -35,7 +35,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/search_for_word"
-                android:textSize="15sp"/>
+                android:textSize="15sp"
+                android:maxLines="1"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
