--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -36,6 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Search for word list"
+                android:maxLines="1"
                 />
 
         </com.google.android.material.textfield.TextInputLayout>
