--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -47,6 +47,7 @@
         android:layout_height="wrap_content"
 
         app:startIconDrawable="@drawable/ic_email_24"
+        android:hint="@string/username"
 
         app:layout_constraintTop_toBottomOf="@id/ac_reset_password_email_label"
         app:layout_constraintLeft_toLeftOf="parent"
